[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path ="src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [[]]은 배열 표시임
[[bin]]
name = "zero2prod"
path = "src/main.rs"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
